--- a/Date_and_Time_Picker_IOS/build.gradle
+++ b/Date_and_Time_Picker_IOS/build.gradle
@@ -12,8 +12,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 2
-        versionName "0.2"
+        versionCode 3
+        versionName "0.3"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -28,8 +28,8 @@ android {
         }
     }
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_1_8
-        targetCompatibility JavaVersion.VERSION_1_8
+        sourceCompatibility JavaVersion.VERSION_11
+        targetCompatibility JavaVersion.VERSION_11
     }
 
     buildFeatures {
