--- a/Date_and_Time_Picker_IOS/build.gradle
+++ b/Date_and_Time_Picker_IOS/build.gradle
@@ -6,14 +6,13 @@ plugins {
 }
 
 android {
-    namespace 'com.android.fajaranugrah.date_and_time_picker_ios'
     compileSdk 33
 
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 3
-        versionName "0.3"
+        versionCode 4
+        versionName "0.4"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -30,6 +29,9 @@ android {
     compileOptions {
         sourceCompatibility JavaVersion.VERSION_11
         targetCompatibility JavaVersion.VERSION_11
+    }
+    kotlinOptions {
+        jvmTarget = '11'
     }
 
     buildFeatures {
