--- a/Date_and_Time_Picker_IOS/build.gradle
+++ b/Date_and_Time_Picker_IOS/build.gradle
@@ -6,13 +6,14 @@ plugins {
 }
 
 android {
+    namespace "com.android.fajaranugrah.date_and_time_picker_ios"
     compileSdk 33
 
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 4
-        versionName "0.4"
+        versionCode 5
+        versionName "0.5"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
