--- a/Date_and_Time_Picker_IOS/src/main/AndroidManifest.xml
+++ b/Date_and_Time_Picker_IOS/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.android.fajaranugrah.date_and_time_picker_ios">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
 
 </manifest>
