add jitpack.yml add project.afterevaluate add androidSourcesJar

--- a/Date_and_Time_Picker_IOS/build.gradle
+++ b/Date_and_Time_Picker_IOS/build.gradle
@@ -5,6 +5,11 @@ plugins {
     id 'kotlin-android'
 }
 
+task androidSourcesJar(type: Jar) {
+    classifier 'sources'
+    from android.sourceSets.main.java.srcDirs
+}
+
 android {
     namespace "com.android.fajaranugrah.date_and_time_picker_ios"
     compileSdk 33
@@ -50,4 +55,15 @@ dependencies {
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.5.1'
+}
+
+project.afterEvaluate {
+    publishing {
+        publications {
+            release(MavenPublication) {
+                from components.release
+                artifact androidSourcesJar // optional sources
+            }
+        }
+    }
 }
