--- a/jitpack.yml
+++ b/jitpack.yml
@@ -1,4 +1,4 @@
 jdk:
   - openjdk11
 install:
-  - ./gradlew build :publishToMavenLocal
+  - ./gradlew build :DateAndTimePickerIOS:publishToMavenLocal
