--- a/DateAndTimePickerIOS/build.gradle
+++ b/DateAndTimePickerIOS/build.gradle
@@ -11,14 +11,14 @@ task androidSourcesJar(type: Jar) {
 }
 
 android {
-    namespace "com.android.fajaranugrah.date_and_time_picker_ios"
+    namespace "com.android.fajaranugrah.dateandtimepickerios"
     compileSdk 33
 
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 10
-        versionName "0.10"
+        versionCode 12
+        versionName "0.12"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -62,6 +62,9 @@ project.afterEvaluate {
         publications {
             release(MavenPublication) {
                 from components.release
+                groupId 'com.android.fajaranugrah'
+                artifactId 'Date_Time_Picker'
+                version '0.12'
                 artifact androidSourcesJar // optional sources
             }
         }
