--- a/DateAndTimePickerIOS/build.gradle
+++ b/DateAndTimePickerIOS/build.gradle
@@ -17,8 +17,8 @@ android {
     defaultConfig {
         minSdk 24
         targetSdk 33
-        versionCode 12
-        versionName "0.12"
+        versionCode 13
+        versionName "0.13"
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
         consumerProguardFiles "consumer-rules.pro"
@@ -64,8 +64,8 @@ project.afterEvaluate {
                 from components.release
                 groupId 'com.android.fajaranugrah'
                 artifactId 'Date_Time_Picker'
-                version '0.12'
-                artifact androidSourcesJar // optional sources
+                version '0.13'
+                //artifact androidSourcesJar // optional sources
             }
         }
     }
